Fixed wrong method (that is available from jdk1.5 only)